--- a/HeiMaPlayer/app/src/main/res/layout/activity_main.xml
+++ b/HeiMaPlayer/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:orientation="vertical"
+        tools:context=".ui.activity.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <include layout="@layout/toolbar"></include>
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout android:layout_width="match_parent"
+                 android:layout_height="0dp"
+                 android:layout_weight="1"
+                 android:id="@+id/container">
+
+    </FrameLayout>
+
+    <com.yinglan.alphatabs.AlphaTabsIndicator android:id="@+id/bottom_bar_container"
+                                              android:layout_width="match_parent"
+                                              android:layout_height="?attr/actionBarSize"
+                                              android:orientation="horizontal">
+
+        <com.yinglan.alphatabs.AlphaTabView android:id="@+id/bottom_bar_home"
+                                            android:layout_width="0dp"
+                                            android:layout_height="match_parent"
+                                            android:layout_weight="1"
+                                            android:padding="5dp"
+                                            app:tabIconNormal="@mipmap/ic_bottom_home_icon"
+                                            app:tabText="首页"/>
+
+        <com.yinglan.alphatabs.AlphaTabView android:id="@+id/bottom_bar_mv"
+                                            android:layout_width="0dp"
+                                            android:layout_height="match_parent"
+                                            android:layout_weight="1"
+                                            android:padding="5dp"
+                                            app:tabIconNormal="@mipmap/ic_bottom_mv_unselect"
+                                            app:tabText="MV"/>
+
+        <com.yinglan.alphatabs.AlphaTabView android:id="@+id/bottom_bar_vlist"
+                                            android:layout_width="0dp"
+                                            android:layout_height="match_parent"
+                                            android:layout_weight="1"
+                                            android:padding="5dp"
+                                            app:tabIconNormal="@mipmap/ic_bottom_vlist_unselect"
+                                            app:tabText="V榜"/>
+
+        <com.yinglan.alphatabs.AlphaTabView android:id="@+id/bottom_bar_mvlist"
+                                            android:layout_width="0dp"
+                                            android:layout_height="match_parent"
+                                            android:layout_weight="1"
+                                            android:padding="5dp"
+                                            app:tabIconNormal="@mipmap/ic_bottom_mvlist_unselect"
+                                            app:tabText="悦单"/>
+
+    </com.yinglan.alphatabs.AlphaTabsIndicator>
+
+</LinearLayout>
