--- a/HeiMaPlayer/app/src/main/res/layout/fragment_home.xml
+++ b/HeiMaPlayer/app/src/main/res/layout/fragment_home.xml
@@ -3,8 +3,14 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:id="@+id/recyclerView"/>
+    <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/refreshLayout"
+                                                  android:layout_width="match_parent"
+                                                  android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                                android:layout_height="match_parent"
+                                                android:id="@+id/recyclerView"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
